# glitt

./: .gitconfig  Cargo.toml  LICENSE  README.md
examples/gitty/: git-rebase-todo
examples/referee-fyi/: git-rebase-todo
src/: main.rs
src/editors/: mod.rs
src/editors/rebase/: editor.rs  mod.rs  todo.rs
text/rebase-todo/: referee-fyi
