[package]
name = "glitt"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/brenapp/glitt/tree/main"
authors = ["Brendan McGuire"]
description = "A terminal UI for some git operations."
license = "MIT"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
git2 = "0.20.2"
ratatui = "0.29.0"
